--- a/ui-vuetify/package.json
+++ b/ui-vuetify/package.json
@@ -11,17 +11,18 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "register-service-worker": "^1.6.2",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuetify": "^2.2.11",
+    "vuejs-logger": "^1.5.4",
+    "vuetify": "^2.2.21",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-e2e-cypress": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-plugin-pwa": "~4.2.0",
+    "@vue/cli-plugin-pwa": "~4.3.0",
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-unit-jest": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
