--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -2,6 +2,21 @@
 version: "3.1"
 
 services:
+  web:
+    image: node:13.6.0-alpine3.10
+    restart: "no"
+    volumes:
+      - ../ui-vuetify:/usr/src/app
+    working_dir: /usr/src/app
+    command: "yarn serve --port 8080"
+    environment:
+      VUE_APP_API_URL: ${VUE_APP_API_URL}
+    env_file:
+      - ./.env-${ENV}
+    ports:
+      - ${WEBAPP_PORT}:8080
+    networks:
+      proxy:
   api:
     image: node:13.6.0-alpine3.10
     restart: "no"
