--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -4,7 +4,7 @@ version: "3.1"
 services:
   web:
     build:
-      context: ./ui-vuetify
+      context: ../ui-vuetify
       dockerfile: Dockerfile
     restart: "no"
     volumes:
