--- a/ui-vuetify/Dockerfile
+++ b/ui-vuetify/Dockerfile
@@ -4,7 +4,7 @@
 # build stage
 FROM node:lts-alpine as build-stage
 WORKDIR /app
-COPY package-prod*.json ./
+ADD package-prod.json ./package.json
 RUN npm install
 COPY . .
 RUN npm run build
