change web to yarn build

--- a/ui-vuetify/Dockerfile
+++ b/ui-vuetify/Dockerfile
@@ -5,9 +5,9 @@
 FROM node:lts-alpine as build-stage
 WORKDIR /app
 ADD package-prod.json ./package.json
-RUN npm install
+RUN yarn install
 COPY . .
-RUN npm run build
+RUN yarn build
 
 # production stage
 FROM nginx:stable-alpine as production-stage
