--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -2,20 +2,55 @@
 version: "3.1"
 
 services:
+  proxy:
+    hostname: reverse
+    image: nginx
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      # config folder MAY NOT exist when first starting
+      - ../proxy/config:/etc/nginx
+      - ../proxy/certs/etc/ssl/private
   web:
     build:
       context: ../ui-vuetify
       dockerfile: Dockerfile
-    restart: "no"
     volumes:
       - ../ui-vuetify:/usr/src/app
-    command: /bin/sh
+      - ../ui-vuetify/node_modules
     environment:
       VUE_APP_API_URL: ${VUE_APP_API_URL}
     env_file:
       - ./.env
     ports:
       - ${WEBAPP_PORT}:80
+    networks:
+      proxy:
+  web-prepared:
+    image: nginx:stable-alpine
+    ports:
+      - 80:80
+    volumes:
+      - ../ui-vuetify/dist:/usr/share/nginx/html
+      - ../ui-vuetify/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    command: [nginx, "-g", "daemon off;"]
+  web-build:
+    image: node:13.6.0-alpine3.10
+    restart: "no"
+    volumes:
+      - ../ui-vuetify:/usr/src/app # map code
+
+    working_dir: /usr/src/app
+    command: "yarn installAndBuild"
+    env_file:
+      - ./.env
+    environment:
+      VUE_APP_API_URL: ${VUE_APP_API_URL}
+    ports:
+      - ${WEBAPP_PORT}:80
+    depends_on:
+      - db
     networks:
       proxy:
   api:
