--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -1,17 +1,36 @@
-server {
-
-  listen 80;
-
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
-  }
-
-  error_page   500 502 503 504  /50x.html;
-
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
+events {
+    worker_connections  4096;  ## Default: 1024
+}
+http {
+    
+   server {
+    listen 80;
+    root    /usr/share/nginx/html;
+    index   index.html index.htm;
+    
+    gzip on;
+    # gzip_types text/css application/javascript application/json image/svg+xml;
+    gzip_comp_level 9;
+    # etag on;
+    # Always serve index.html for any request
+   
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+        # try_files $uri /index.html;
+    }
+  
+    location /static/ {
+        add_header Cache-Control max-age=31536000;
+    }
+    location /index.html {
+        add_header Cache-Control no-cache;
+    }
+    location /config.json {
+        add_header Cache-Control no-cache;
+    }
+    error_log  /var/log/nginx/vue-app-error.log;
+    access_log /var/log/nginx/vue-app-access.log;
+   }
 
 }
