changed prod proxy config to folder named prod

--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -10,8 +10,8 @@ services:
       - 443:443
     volumes:
       # config folder MAY NOT exist when first starting
-      - ../proxy/config:/etc/nginx
-      - ../proxy/certs/etc/ssl/private
+      - ../proxy/prod/config:/etc/nginx
+      - ../proxy/prod/certs/etc/ssl/private
   web:
     build:
       context: ../ui-vuetify
