--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -31,10 +31,17 @@ services:
     image: nginx:stable-alpine
     ports:
       - 80:80
+    environment:
+      - VIRTUAL_HOST=adivo.ch \
+      - LETSENCRYPT_HOST=adivo.ch \
+      - LETSENCRYPT_EMAIL=info@adivo.ch \
     volumes:
       - ../ui-vuetify/dist:/usr/share/nginx/html
       - ../ui-vuetify/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     command: [nginx, "-g", "daemon off;"]
+    networks:
+      - proxy:
+      - webproxy
   web-build:
     image: node:13.6.0-alpine3.10
     restart: "no"
