--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -41,7 +41,7 @@ services:
     command: [nginx, "-g", "daemon off;"]
     networks:
       - proxy
-      - imonet_proxy
+      - imonetprod_proxy
   web-build:
     image: node:13.6.0-alpine3.10
     restart: "no"
