--- a/proxy/prod/nginx.conf
+++ b/proxy/prod/nginx.conf
@@ -30,7 +30,7 @@ http {
         # see https://medium.com/js-dojo/vuejs-dev-serve-with-reverse-proxy-e15c776286b8
         location / {
             # configuration see for example https://medium.com/@pratheekhegde/setting-caching-headers-for-a-spa-in-nginx-eb2f75f52441
-            proxy_pass         http://imonet-prod_web_1:8080;
+            proxy_pass         http://imonetprod_web_1:8080;
             # Security headers
             # X-Frame-Options is to prevent from clickJacking attack
             add_header X-Frame-Options SAMEORIGIN;
