--- a/proxy/config/nginx.conf
+++ b/proxy/config/nginx.conf
@@ -30,7 +30,7 @@ http {
         # see https://medium.com/js-dojo/vuejs-dev-serve-with-reverse-proxy-e15c776286b8
         location / {
             # configuration see for example https://medium.com/@pratheekhegde/setting-caching-headers-for-a-spa-in-nginx-eb2f75f52441
-            proxy_pass         http://imonet_prod_web_1:8080;
+            proxy_pass         http://imonetprod_web_1:80;
             # Security headers
             # X-Frame-Options is to prevent from clickJacking attack
             add_header X-Frame-Options SAMEORIGIN;
@@ -60,7 +60,7 @@ http {
             add_header Access-Control-Allow-Origin "http://immo.adivo.ch";
         }
         location /sockjs-node/ {
-            proxy_pass         http://imonet_prod_web_1:8080;
+            proxy_pass         http://imonetprod_web_1:80;
             proxy_http_version  1.1;
             proxy_set_header    Upgrade $http_upgrade;
             proxy_set_header    Connection "Upgrade";
@@ -93,7 +93,7 @@ http {
         # Example: http://dbadmin.rhb.innotix.local
         server_name ~^api\.immo\.adivo\.(ch|com)$;
         location / {
-            proxy_pass         http://imonet-dev_api_1:4060;
+            proxy_pass         http://imonetprod_api_1:4060;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
@@ -111,7 +111,7 @@ http {
         # Example: http://dbadmin.rhb.innotix.local
         server_name ~^dbadmin\.(?<CUSTOMER>.*)\.innotix\.(local|com)$;
         location / {
-            proxy_pass         http://imonet-dev_adminer_1:4022;
+            proxy_pass         http://imonetprod_adminer_1:4022;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
