--- a/proxy/config/nginx copy.conf
+++ b/proxy/config/nginx copy.conf
@@ -83,6 +83,44 @@ http {
         }
     }
 
+    # --------------------------------------------------------------------------------------
+    # REST API configuration
+    server { 
+        listen       80;
+
+        access_log logs/access.log;
+        # Pattern to access the api service
+        # Example: http://dbadmin.rhb.innotix.local
+        server_name ~^api\.immo\.adivo\.(ch|com)$;
+        location / {
+            proxy_pass         http://imonetprod_api_1:4060;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+    # --------------------------------------------------------------------------------------
+    # DB Admin Tool
+    server { 
+        listen       80;
+
+        access_log logs/access.log;
+        # Pattern to access the api service
+        # Example: http://dbadmin.rhb.innotix.local
+        server_name ~^dbadmin\.(?<CUSTOMER>.*)\.innotix\.(local|com)$;
+        location / {
+            proxy_pass         http://imonetprod_adminer_1:4022;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+    
+   
 
 }
 
