--- a/proxy/prod/nginx.conf
+++ b/proxy/prod/nginx.conf
@@ -25,12 +25,12 @@ http {
     # WebApp configuration must be first because nginx running within the container is exposed at port 80 
      server { 
         listen       80;
-        server_name ~^immo\.adivo\.ch$;
+        server_name immo.adivo.ch;
         access_log logs/access.log;
         # see https://medium.com/js-dojo/vuejs-dev-serve-with-reverse-proxy-e15c776286b8
         location / {
             # configuration see for example https://medium.com/@pratheekhegde/setting-caching-headers-for-a-spa-in-nginx-eb2f75f52441
-            proxy_pass         http://imonetprod_web_1:8080;
+            proxy_pass         http://imonetprod_web_1:80;
             # Security headers
             # X-Frame-Options is to prevent from clickJacking attack
             add_header X-Frame-Options SAMEORIGIN;
@@ -60,7 +60,7 @@ http {
             add_header Access-Control-Allow-Origin "http://immo.adivo.ch";
         }
         location /sockjs-node/ {
-            proxy_pass         http://imonet-prod_web_1:8080;
+            proxy_pass         http://imonet-prod_web_1:80;
             proxy_http_version  1.1;
             proxy_set_header    Upgrade $http_upgrade;
             proxy_set_header    Connection "Upgrade";
