--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -2,6 +2,20 @@
 version: "3.1"
 
 services:
+  nginx:
+    image: nginx:1.15-alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ../proxy/data/nginx:/etc/nginx/conf.d
+      - ../prody/data/certbot/conf:/etc/letsencrypt
+      - ../proxy/data/certbot/www:/var/www/certbot
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ../proxy/data/certbot/conf:/etc/letsencrypt
+      - ../proxy/data/certbot/www:/var/www/certbot
   proxy:
     hostname: reverse
     image: nginx
@@ -38,6 +52,7 @@ services:
     volumes:
       - ../ui-vuetify/dist:/usr/share/nginx/html
       - ../ui-vuetify/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+       - ../proxy/prod/certs:/etc/ssl/private
     command: [nginx, "-g", "daemon off;"]
     networks:
       - proxy
