--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -8,14 +8,14 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ../proxy/data/nginx:/etc/nginx/conf.d
-      - ../prody/data/certbot/conf:/etc/letsencrypt
-      - ../proxy/data/certbot/www:/var/www/certbot
+      - ../proxy/config2/nginx:/etc/nginx/conf.d
+      - ../prody/config2/certbot/conf:/etc/letsencrypt
+      - ../proxy/config2/certbot/www:/var/www/certbot
   certbot:
     image: certbot/certbot
     volumes:
-      - ../proxy/data/certbot/conf:/etc/letsencrypt
-      - ../proxy/data/certbot/www:/var/www/certbot
+      - ../proxy/config2/certbot/conf:/etc/letsencrypt
+      - ../proxy/config2/certbot/www:/var/www/certbot
   proxy:
     hostname: reverse
     image: nginx
