--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -9,7 +9,7 @@ services:
       - "443:443"
     volumes:
       - ../proxy/config2/nginx:/etc/nginx/conf.d
-      - ../prody/config2/certbot/conf:/etc/letsencrypt
+      - ../proxy/config2/certbot/conf:/etc/letsencrypt
       - ../proxy/config2/certbot/www:/var/www/certbot
   certbot:
     image: certbot/certbot
@@ -51,7 +51,7 @@ services:
       - LETSENCRYPT_EMAIL=info@adivo.ch \
     volumes:
       - ../ui-vuetify/dist:/usr/share/nginx/html
-      - ../ui-vuetify/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../ui-vuetify/nginx/nginx.conf:/etc/nginx/nginx.conf
        - ../proxy/prod/certs:/etc/ssl/private
     command: [nginx, "-g", "daemon off;"]
     networks:
