proxy network added

--- a/proxy/config2/app.conf
+++ b/proxy/config2/app.conf
@@ -1,6 +1,7 @@
 include /etc/letsencrypt/options-ssl-nginx.conf;
 ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
+access_log logs/access.log;
+      
 server {
     listen 80;
     server_name adivo.ch;
