--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -48,10 +48,7 @@ services:
     image: nginx:stable-alpine
     #ports:
     #  - 80:80
-    environment:
-      - VIRTUAL_HOST=adivo.ch \
-      - LETSENCRYPT_HOST=adivo.ch \
-      - LETSENCRYPT_EMAIL=info@adivo.ch \
+
     volumes:
       - ../ui-vuetify/dist:/usr/share/nginx/html
       - ../ui-vuetify/nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -59,7 +56,8 @@ services:
     command: [nginx, "-g", "daemon off;"]
     networks:
       - proxy
-  web-build:
+
+  web-build-2:
     image: node:13.6.0-alpine3.10
     restart: "no"
     volumes:
@@ -154,7 +152,7 @@ services:
 
 networks:
   proxy:
-      external: true
+    external: true
 volumes:
   api:
   mysql:
