--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -1,7 +1,12 @@
+events {
+  worker_connections  4096;  ## Default: 1024
+}
+
 include /etc/letsencrypt/options-ssl-nginx.conf;
 ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 access_log logs/access.log;
-      
+
+http {
 server {
     listen 80;
     server_name adivo.ch;
@@ -10,6 +15,8 @@ server {
         return 301 https://$host$request_uri;
     }    
 }
+}
+https {
 server {
     listen 443 ssl;
     server_name adivo.ch;
@@ -19,4 +26,5 @@ server {
     }
     ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
+}
 }
