--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -9,7 +9,8 @@ services:
       - "443:443"
     volumes:
       - ../proxy/config2/nginx:/etc/nginx/conf.d
-      - ../proxy/config2/certbot/conf:/etc/letsencrypt
+      #- ../proxy/config2/certbot/conf:/etc/letsencrypt
+      - /etc/letsencrypt:/etc/letsencrypt
       - ../proxy/config2/certbot/www:/var/www/certbot
     networks:
       - proxy
