--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -12,6 +12,8 @@ services:
       #- ../proxy/config2/certbot/conf:/etc/letsencrypt
       - /etc/letsencrypt:/etc/letsencrypt
       - ../proxy/config2/certbot/www:/var/www/certbot
+      - ../proxy/config2/logs:/var/log/nginx
+
     networks:
       - proxy
 
