--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -49,9 +49,8 @@ services:
       proxy:
   web:
     image: nginx:stable-alpine
-    #ports:
-    #  - 80:80
-
+    ports:
+      - 81:80
     volumes:
       - ../ui-vuetify/dist:/usr/share/nginx/html
       - ../ui-vuetify/nginx/nginx.conf:/etc/nginx/nginx.conf
