reduced proxy config

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -1,30 +1,42 @@
+worker_processes  5;
+error_log  logs/error.log;
+access_log logs/access.log;
+
+pid        logs/nginx.pid;
+worker_rlimit_nofile 8192;
+
 events {
   worker_connections  4096;  ## Default: 1024
 }
 
-include /etc/letsencrypt/options-ssl-nginx.conf;
-ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-access_log logs/access.log;
+#include /etc/letsencrypt/options-ssl-nginx.conf;
+#ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 http {
+    tcp_nopush   on;
+    server_names_hash_bucket_size 128; # this seems to be required for some vhosts
+    
+    resolver 127.0.0.11 ipv6=off;
+    resolver_timeout 5s;
     server {
         listen 80;
         server_name adivo.ch;
     
         location / {
-            return 301 https://$host$request_uri;
+            #return 301 https://$host$request_uri;
+            proxy_pass         http://imonetprod_web_1:80;
         }    
     }
 }
 https {
-server {
-    listen 443 ssl;
-    server_name adivo.ch;
-    
-    location / {
-        proxy_pass http://imonetprod_web_1:80; #for demo purposes
+    server {
+        listen 443 ssl;
+        server_name adivo.ch;
+        
+        location / {
+            proxy_pass http://imonetprod_web_1:80; #for demo purposes
+        }
+        #ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
+        #ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
     }
-    ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
-}
 }
