--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -27,16 +27,15 @@ http {
             proxy_pass         http://imonetprod_web_1:80;
         }    
     }
-}
-https {
-    server {
+
+     server {
         listen 443 ssl;
         server_name adivo.ch;
         
         location / {
             proxy_pass http://imonetprod_web_1:80; #for demo purposes
         }
-        #ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
-        #ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
     }
 }
