--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -11,9 +11,9 @@ services:
       - ../proxy/config2:/etc/nginx
       #- ../proxy/config2/nginx:/etc/nginx/conf.d
       #- ../proxy/config2/certbot/conf:/etc/letsencrypt
-      # - /etc/letsencrypt:/etc/letsencrypt
+      - /etc/letsencrypt:/etc/letsencrypt
       # - ../proxy/config2/certbot/www:/var/www/certbot
-      # - ../proxy/config2/logs:/var/log/nginx
+      - ../proxy/config2/logs:/var/log/nginx
     networks:
       proxy:
 
