redirect http to https

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -23,8 +23,8 @@ http {
         server_name adivo.ch;
     
         location / {
-            #return 301 https://$host$request_uri;
-            proxy_pass         http://imonetprod_web_1:80;
+            return 301 https://$host$request_uri;
+            #proxy_pass         http://imonetprod_web_1:80;
         }    
     }
 
