--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -18,6 +18,12 @@ http {
     access_log logs/access.log;
     resolver 127.0.0.11 ipv6=off;
     resolver_timeout 5s;
+
+    upstream imonetprod_web {
+        server imonetprod_web_1:80 weight=3;
+        server imonetprod_web_2:80;
+        server imonetprod_web_3:80;    
+    }
     server {
         listen 80;
         server_name adivo.ch;
@@ -33,7 +39,8 @@ http {
         server_name adivo.ch;
         
         location / {
-            proxy_pass http://imonetprod_web_1:80; #for demo purposes
+            #proxy_pass http://imonetprod_web_1:80; #for demo purposes
+            proxy_pass http://imonetprod_web; #for demo purposes
         }
         ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
