upstream using only existing

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -21,8 +21,8 @@ http {
 
     upstream imonetprod_web {
         server imonetprod_web_1:80 weight=3;
-        server imonetprod_web_2:80;
-        server imonetprod_web_3:80;    
+        #server imonetprod_web_2:80;
+        #server imonetprod_web_3:80;    
     }
     server {
         listen 80;
