--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -39,37 +39,27 @@ http {
      server {
         listen 443 ssl;
         server_name adivo.ch;
-        
+        gzip on;
+        gzip_types text/css application/javascript application/json image/svg+xml;
+        gzip_comp_level 9;
+        etag on;
         location / {
             #proxy_pass http://imonetprod_web_1:80; #for demo purposes
             proxy_pass http://imonetprod_web; #for demo purposes
 
-             # Security headers
-            # X-Frame-Options is to prevent from clickJacking attack
-            # add_header X-Frame-Options SAMEORIGIN;
-            # disable content-type sniffing on some browsers.
-            # add_header X-Content-Type-Options nosniff;
-            # This header enables the Cross-site scripting (XSS) filter
-            # add_header X-XSS-Protection "1; mode=block";
-            # This will enforce HTTP browsing into HTTPS and avoid ssl stripping attack
-            add_header Referrer-Policy "no-referrer-when-downgrade";
-            # No caching 
-            add_header Cache-Control "no-store, no-cache, must-revalidate";
-            #proxy_set_header    Host                $host;
-            #proxy_set_header    Host                localhost;
-            #proxy_set_header    X-Real-IP           $remote_addr;
-            #proxy_set_header    X-Forwarded-Host    $host;
-            #proxy_set_header    X-Forwarded-Host    localhost;
-            #proxy_set_header    X-Forwarded-Server  localhost;
-            #proxy_set_header    X-Forwarded-Proto   $scheme;
-            #proxy_set_header    X-Forwarded-For     $remote_addr;
-           
-            #proxy_redirect off;
-            proxy_connect_timeout 90s;
-            proxy_read_timeout 90s;
-            proxy_send_timeout 90s;
-            #proxy_hide_header Access-Control-Allow-Origin;
-            #add_header Access-Control-Allow-Origin "https://immo.adivo.ch";
+        }
+        
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+        location /static/ {
+            add_header Cache-Control max-age=31536000;
+        }
+        location /index.html {
+            add_header Cache-Control no-cache;
+        }
+        location /config.json {
+            add_header Cache-Control no-cache;
         }
         ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
