proxy_pass_header Content-Type;

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -43,23 +43,13 @@ http {
         gzip_types text/css application/javascript application/json image/svg+xml;
         gzip_comp_level 9;
         etag on;
+        proxy_pass_header Content-Type;
         location / {
             #proxy_pass http://imonetprod_web_1:80; #for demo purposes
             proxy_pass http://imonetprod_web; #for demo purposes
-
-             try_files $uri $uri/ /index.html;
-
+          
         }
        
-        location /static/ {
-            add_header Cache-Control max-age=31536000;
-        }
-        location /index.html {
-            add_header Cache-Control no-cache;
-        }
-        location /config.json {
-            add_header Cache-Control no-cache;
-        }
         ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
     }
