--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -7,6 +7,7 @@ http {
     listen 80;
     root    /usr/share/nginx/html;
     index   index.html index.htm;
+    proxy_pass_header Content-Type;
     
     gzip on;
     # gzip_types text/css application/javascript application/json image/svg+xml;
@@ -25,6 +26,9 @@ http {
     }
     location /index.html {
         add_header Cache-Control no-cache;
+    }
+    location /service-worker.js {
+        proxy_pass_header Content-Type;
     }
     location /config.json {
         add_header Cache-Control no-cache;
