content-type header set for service-worker.js

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -39,15 +39,14 @@ http {
      server {
         listen 443 ssl;
         server_name adivo.ch;
-        gzip on;
-        gzip_types text/css application/javascript application/json image/svg+xml;
-        gzip_comp_level 9;
-        etag on;
-        proxy_pass_header Content-Type;
+        # gzip on;
+        #gzip_types text/css application/javascript application/json image/svg+xml;
+        #gzip_comp_level 9;
+        #etag on;
+        #proxy_pass_header Content-Type;
         location / {
             #proxy_pass http://imonetprod_web_1:80; #for demo purposes
             proxy_pass http://imonetprod_web; #for demo purposes
-          
         }
        
         ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
