--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -8,7 +8,7 @@ http {
     root    /usr/share/nginx/html;
     index   index.html index.htm;
     proxy_pass_header Content-Type;
-    
+
     gzip on;
     # gzip_types text/css application/javascript application/json image/svg+xml;
     gzip_comp_level 9;
@@ -28,7 +28,7 @@ http {
         add_header Cache-Control no-cache;
     }
     location /service-worker.js {
-        proxy_pass_header Content-Type;
+        proxy_set_header Content-Type "application/javascript";
     }
     location /config.json {
         add_header Cache-Control no-cache;
