stripped nginx configs

--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -7,11 +7,12 @@ http {
     listen 80;
     root    /usr/share/nginx/html;
     index   index.html index.htm;
-    proxy_pass_header Content-Type;
-
-    gzip on;
+    error_log  /var/log/nginx/vue-app-error.log;
+    access_log /var/log/nginx/vue-app-access.log;
+   
+    # gzip on;
     # gzip_types text/css application/javascript application/json image/svg+xml;
-    gzip_comp_level 9;
+    # gzip_comp_level 9;
     # etag on;
     # Always serve index.html for any request
    
@@ -21,20 +22,18 @@ http {
         # try_files $uri /index.html;
     }
   
-    location /static/ {
-        add_header Cache-Control max-age=31536000;
-    }
-    location /index.html {
-        add_header Cache-Control no-cache;
-    }
-    location /service-worker.js {
-        proxy_set_header Content-Type "application/javascript";
-    }
-    location /config.json {
-        add_header Cache-Control no-cache;
-    }
-    error_log  /var/log/nginx/vue-app-error.log;
-    access_log /var/log/nginx/vue-app-access.log;
+    #location /static/ {
+    #    add_header Cache-Control max-age=31536000;
+    #}
+    #location /index.html {
+    #    add_header Cache-Control no-cache;
+    #}
+    #location /service-worker.js {
+    #    proxy_set_header Content-Type "application/javascript";
+    #}
+    #location /config.json {
+    #    add_header Cache-Control no-cache;
+    #}
    }
 
 }
