--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -28,9 +28,14 @@ http {
     #location /index.html {
     #    add_header Cache-Control no-cache;
     #}
-    #location /service-worker.js {
-    #    proxy_set_header Content-Type "application/javascript";
-    #}
+    location /service-worker.js {
+       proxy_set_header Content-Type "application/javascript";
+        ## override content-type ##
+        types { } default_type "application/javascript; charset=utf-8";
+ 
+        ## override header (more like send custom header using nginx) #
+        add_header x-robots-tag "noindex, follow";
+    }
     #location /config.json {
     #    add_header Cache-Control no-cache;
     #}
