--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -26,24 +26,27 @@ http {
         #server imonetprod_web_2:80;
         #server imonetprod_web_3:80;    
     }
-    server {
-        listen 80;
-        server_name adivo.ch;
+    #server {
+    #    listen 80;
+    #    server_name adivo.ch;
     
-        location / {
-            return 301 https://$host$request_uri;
+     #   location / {
+      #      return 301 https://$host$request_uri;
+            
             #proxy_pass         http://imonetprod_web_1:80;
-        }    
+       # }    
+    #}
+    server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        server_name _;
+        return 301 https://$host$request_uri;
     }
 
      server {
         listen 443 ssl;
         server_name adivo.ch;
-        # gzip on;
-        # gzip_types text/css application/javascript application/json image/svg+xml;
-        # gzip_comp_level 9;
-        # etag on;
-        # proxy_pass_header Content-Type;
+        
         location / {
             #proxy_pass http://imonetprod_web_1:80; #for demo purposes
             proxy_pass http://imonetprod_web; #for demo purposes
@@ -51,5 +54,14 @@ http {
        
         ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
+    }
+
+    server {
+        listen 443 ssl http2;
+        server_name www.adivo.ch;
+
+        # . . . other code
+
+        return 301 https://adivo.ch$request_uri;
     }
 }
