--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -31,10 +31,18 @@ http {
     location /service-worker.js {
        proxy_set_header Content-Type "application/javascript";
         ## override content-type ##
-        types { } default_type "application/javascript; charset=utf-8";
+        #types { } default_type "application/javascript; charset=utf-8";
  
         ## override header (more like send custom header using nginx) #
         add_header x-robots-tag "noindex, follow";
+    }
+    location /js/ {
+       proxy_set_header Content-Type "application/javascript";
+        ## override content-type ##
+        #types { } default_type "application/javascript; charset=utf-8";
+ 
+        ## override header (more like send custom header using nginx) #
+        #add_header x-robots-tag "noindex, follow";
     }
     #location /config.json {
     #    add_header Cache-Control no-cache;
