--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -36,12 +36,12 @@ http {
             #proxy_pass         http://imonetprod_web_1:80;
        # }    
     #}
-    server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
-        server_name _;
-        return 301 https://$host$request_uri;
-    }
+    # server {
+    #    listen 80 default_server;
+    #    listen [::]:80 default_server;
+    #    server_name _;
+     #   return 301 https://$host$request_uri;
+    #}  
 
      server {
         listen 443 ssl;
@@ -56,12 +56,12 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
     }
 
-    server {
-        listen 443 ssl http2;
-        server_name www.adivo.ch;
+    #server {
+     #   listen 443 ssl http2;
+      #  server_name www.adivo.ch;
 
         # . . . other code
 
-        return 301 https://adivo.ch$request_uri;
-    }
+       # return 301 https://adivo.ch$request_uri;
+ #   }
 }
