--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -28,9 +28,10 @@ http {
     #location /index.html {
     #    add_header Cache-Control no-cache;
     #}
-    location /service-worker.js {
+    location /*.js {
        proxy_set_header Content-Type "application/javascript";
         ## override content-type ##
+        ## THIS WORKS, whereas proxy_set_header does not
         types { } default_type "application/javascript; charset=utf-8";
  
         ## override header (more like send custom header using nginx) #
