--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -28,7 +28,7 @@ http {
     #location /index.html {
     #    add_header Cache-Control no-cache;
     #}
-    location /*.js {
+    location ~ \.js$  {
        proxy_set_header Content-Type "application/javascript";
         ## override content-type ##
         ## THIS WORKS, whereas proxy_set_header does not
