--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -37,6 +37,15 @@ http {
         ## override header (more like send custom header using nginx) #
         add_header x-robots-tag "noindex, follow";
     }
+    location ~ \.css$  {
+       proxy_set_header Content-Type "text/css";
+        ## override content-type ##
+        ## THIS WORKS, whereas proxy_set_header does not
+        types { } default_type "application/javascript; charset=utf-8";
+ 
+        ## override header (more like send custom header using nginx) #
+        add_header x-robots-tag "noindex, follow";
+    }
     location /js/ {
        proxy_set_header Content-Type "application/javascript";
         ## override content-type ##
