--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -37,7 +37,7 @@ http {
         ## override header (more like send custom header using nginx) #
         add_header x-robots-tag "noindex, follow";
     }
-    location ~ \.css$  {
+    location ~ css\.css$  {
        proxy_set_header Content-Type "text/css";
         ## override content-type ##
         ## THIS WORKS, whereas proxy_set_header does not
