--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -37,11 +37,10 @@ http {
         ## override header (more like send custom header using nginx) #
         add_header x-robots-tag "noindex, follow";
     }
-    location ~ css\.css$  {
-       proxy_set_header Content-Type "text/css";
+    location ~ /css/\.css$  {
         ## override content-type ##
         ## THIS WORKS, whereas proxy_set_header does not
-        types { } default_type "application/javascript; charset=utf-8";
+        types { } default_type "text/css";
  
         ## override header (more like send custom header using nginx) #
         add_header x-robots-tag "noindex, follow";
