--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -36,12 +36,12 @@ http {
             #proxy_pass         http://imonetprod_web_1:80;
        # }    
     #}
-    # server {
-    #    listen 80 default_server;
-    #    listen [::]:80 default_server;
-    #    server_name _;
-     #   return 301 https://$host$request_uri;
-    #}  
+     server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        server_name _;
+        return 301 https://$host$request_uri;
+    }  
 
      server {
         listen 443 ssl;
