--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -6,11 +6,11 @@ pid        logs/nginx.pid;
 worker_rlimit_nofile 8192;
 
 events {
-  worker_connections  4096;  ## Default: 1024
+  worker_connections  2048;  ## Default: 1024
 }
 
-#include /etc/letsencrypt/options-ssl-nginx.conf;
-#ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+include /etc/letsencrypt/options-ssl-nginx.conf;
+ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 http {
     tcp_nopush   on;
@@ -29,39 +29,36 @@ http {
     #server {
     #    listen 80;
     #    server_name adivo.ch;
-    
-     #   location / {
-      #      return 301 https://$host$request_uri;
+    #   location / {
+    #       return 301 https://$host$request_uri;
             
             #proxy_pass         http://imonetprod_web_1:80;
-       # }    
+    # }    
     #}
-     server {
+    # Redirect any connection on http to https
+    server {
         listen 80 default_server;
         listen [::]:80 default_server;
         server_name _;
         return 301 https://$host$request_uri;
     }  
 
-     server {
+    server {
         listen 443 ssl;
+        # The server_name is used to match the correct server section.
+        # However if no match occurs the first server section is applied.
         server_name adivo.ch;
         
         location / {
-            #proxy_pass http://imonetprod_web_1:80; #for demo purposes
-            proxy_pass http://imonetprod_web; #for demo purposes
+            # When using the internal url of the web service:
+            # proxy_pass http://imonetprod_web_1:80; 
+
+            # Reference the upstream server configured above
+            proxy_pass http://imonetprod_web; 
         }
        
         ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
     }
-
-    #server {
-     #   listen 443 ssl http2;
-      #  server_name www.adivo.ch;
-
-        # . . . other code
-
-       # return 301 https://adivo.ch$request_uri;
- #   }
+    
 }
