commented ssl_dhparam

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -10,7 +10,7 @@ events {
 }
 
 include /etc/letsencrypt/options-ssl-nginx.conf;
-ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+#ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 http {
     tcp_nopush   on;
