--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -9,8 +9,8 @@ events {
   worker_connections  2048;  ## Default: 1024
 }
 
-include /etc/letsencrypt/options-ssl-nginx.conf;
-#ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+# include /etc/letsencrypt/options-ssl-nginx.conf;
+ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 http {
     tcp_nopush   on;
