moved sec config to http section

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -9,8 +9,6 @@ events {
   worker_connections  2048;  ## Default: 1024
 }
 
-# include /etc/letsencrypt/options-ssl-nginx.conf;
-ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 http {
     tcp_nopush   on;
@@ -18,6 +16,9 @@ http {
     access_log logs/access.log;
     resolver 127.0.0.11 ipv6=off;
     resolver_timeout 5s;
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     # Means that proxy_pass hosts, here imonetprod_web is resolved to addresses listed as server, that is imonetprod_web_1:80
     # weight=3 means that this server is preferred
