--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -22,15 +22,7 @@ http {
         #server imonetprod_web_2:80;
         #server imonetprod_web_3:80;    
     }
-    #server {
-    #    listen 80;
-    #    server_name adivo.ch;
-    #   location / {
-    #       return 301 https://$host$request_uri;
-            
-            #proxy_pass         http://imonetprod_web_1:80;
-    # }    
-    #}
+   
     # Redirect any connection on http to https
     server {
         listen 80 default_server;
@@ -40,7 +32,10 @@ http {
     }  
 
     server {
-        listen 443 ssl;
+        # Listen for ipv6
+        listen [::]:443 ssl http2 ipv6only=on; 
+        # Listen for ipv4
+        listen 443 ssl http2;
         # The server_name is used to match the correct server section.
         # However if no match occurs the first server section is applied.
         server_name adivo.ch;
@@ -56,7 +51,8 @@ http {
         ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
     
-        include /etc/letsencrypt/options-ssl-nginx.conf;
+        # include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     }
