--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -51,10 +51,58 @@ http {
         ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
     
+        # comment the following line and add the ssl_ciphers to enable http2
         # include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
+    }
+    # --------------------------------------------------------------------------------------
+    # REST API configuration
+    upstream imonetprod_api {
+        server imonetprod_api_1:4060 weight=3
+    }
+    server { 
+        # Listen for ipv6
+        listen [::]:443 ssl http2 ipv6only=on; 
+        # Listen for ipv4
+        listen 443 ssl http2;
+       
+        server_name api.adivo.ch;
+        
+        # Pattern to access the api service
+        # Example: http://dbadmin.rhb.innotix.local
+        location / {
+            proxy_pass         http://imonetprod_api;
+            # proxy_redirect     off;
+            # proxy_set_header   Host $host;
+            # proxy_set_header   X-Real-IP $remote_addr;
+            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+    # --------------------------------------------------------------------------------------
+    # DB Admin Tool
+    upstream imonetprod_api {
+        server imonetprod_adminer_1:4022 weight=3
     }
     
+    server { 
+        # Listen for ipv6
+        listen [::]:443 ssl http2 ipv6only=on; 
+        # Listen for ipv4
+        listen 443 ssl http2;
+       
+        server_name adminer.adivo.ch;
+        
+        # Pattern to access the api service
+        # Example: http://dbadmin.rhb.innotix.local
+        location / {
+            proxy_pass         http://imonetprod_adminer;
+            # proxy_redirect     off;
+            # proxy_set_header   Host $host;
+            # proxy_set_header   X-Real-IP $remote_addr;
+            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
 }
