--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -2,7 +2,7 @@
 version: "3.1"
 
 services:
-  nginx:
+  proxy:
     image: nginx:1.15-alpine
     ports:
       - "80:80"
@@ -21,16 +21,7 @@ services:
     volumes:
       - ../proxy/config2/certbot/conf:/etc/letsencrypt
       - ../proxy/config2/certbot/www:/var/www/certbot
-  proxy_depr:
-    hostname: reverse
-    image: nginx
-    ports:
-      - 80:80
-      - 443:443
-    volumes:
-      # config folder MAY NOT exist when first starting
-      - ../proxy/prod/config/nginx.conf:/etc/nginx/nginx.conf
-      - ../proxy/prod/certs:/etc/ssl/private
+
   web-build:
     build:
       context: ../ui-vuetify
