--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -39,8 +39,8 @@ services:
       proxy:
   web:
     image: nginx:stable-alpine
-    ports:
-      - 81:80
+    # ports:
+    #  - 81:80
     volumes:
       - ../ui-vuetify/dist:/usr/share/nginx/html
       - ../ui-vuetify/nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -104,8 +104,7 @@ services:
     ports:
       - ${DB_PORT}:3306
 
-    networks:
-      - proxy
+    networks: proxy
 
   adminer:
     image: adminer
