--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -103,8 +103,8 @@ services:
       - ../db/db-setup/default:/docker-entrypoint-initdb.d
     ports:
       - ${DB_PORT}:3306
-
-    networks: proxy
+    networks:
+      proxy:
 
   adminer:
     image: adminer
