--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -15,8 +15,6 @@ http {
     resolver 127.0.0.11 ipv6=off;
     resolver_timeout 5s;
    
-   
-   
     # Redirect any connection on http to https
     server {
         listen 80 default_server;
@@ -25,10 +23,10 @@ http {
         return 301 https://$host$request_uri;
     }  
 
-     # --------------------------------------------------------------------------------------
+    # --------------------------------------------------------------------------------------
     # REST API configuration
     upstream imonetprod_api {
-        server imonetprod_api_1:4060 weight=3
+        server imonetprod_api_1:4060 weight=3;
     }
     server { 
         # Listen for ipv6
@@ -53,7 +51,7 @@ http {
         ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     }
-     
+
     # Means that proxy_pass hosts, here imonetprod_web is resolved to addresses listed as server, that is imonetprod_web_1:80
     # weight=3 means that this server is preferred
     upstream imonetprod_web {
@@ -90,7 +88,7 @@ http {
     # --------------------------------------------------------------------------------------
     # DB Admin Tool
     upstream imonetprod_adminer {
-        server imonetprod_adminer_1:4022 weight=3
+        server imonetprod_adminer_1:4022 weight=3;
     }
     
     server { 
