--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -30,9 +30,10 @@ http {
     }
     server { 
         # Listen for ipv6
-        listen [::]:443 ssl http2 #ipv6only=on; 
+        # listen [::]:443 ssl http2 ipv6only=on; 
+        listen [::]:443 ssl http2; 
         # Listen for ipv4
-        #listen 443 ssl http2;
+        listen 443 ssl http2;
        
         server_name api.adivo.ch;
         
@@ -61,7 +62,8 @@ http {
     }
     server {
         # Listen for ipv6
-        listen [::]:443 ssl http2 #ipv6only=on; 
+        #listen [::]:443 ssl http2 ipv6only=on; 
+        listen [::]:443 ssl http2; 
         # Listen for ipv4
         listen 443 ssl http2;
         # The server_name is used to match the correct server section.
@@ -93,7 +95,8 @@ http {
     
     server { 
         # Listen for ipv6
-        listen [::]:443 ssl http2 #ipv6only=on; 
+        #listen [::]:443 ssl http2 ipv6only=on; 
+        listen [::]:443 ssl http2; 
         # Listen for ipv4
         listen 443 ssl http2;
        
