--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -40,7 +40,7 @@ http {
         listen 443 ssl http2;
         # The server_name is used to match the correct server section.
         # However if no match occurs the first server section is applied.
-        server_name adivo.ch;
+        server_name web.adivo.ch;
         
         location / {
             # When using the internal url of the web service:
@@ -81,7 +81,7 @@ http {
             # proxy_set_header   Host $host;
             # proxy_set_header   X-Real-IP $remote_addr;
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
+            # proxy_set_header   X-Forwarded-Host $server_name;
         }
         ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
@@ -111,7 +111,7 @@ http {
             # proxy_set_header   Host $host;
             # proxy_set_header   X-Real-IP $remote_addr;
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
+            # proxy_set_header   X-Forwarded-Host $server_name;
         }
     }
 }
