config with common ssl

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -34,14 +34,14 @@ http {
     }
     server {
         # Listen for ipv6
-        #listen [::]:443 ssl http2 ipv6only=on; 
+        # listen [::]:443 ssl http2 ipv6only=on; 
         listen [::]:443 ssl http2; 
         # Listen for ipv4
         listen 443 ssl http2;
         # The server_name is used to match the correct server section.
         # However if no match occurs the first server section is applied.
         server_name adivo.ch;
-        
+        include common.conf;
         location / {
             # When using the internal url of the web service:
             # proxy_pass http://imonetprod_web_1:80; 
@@ -50,32 +50,9 @@ http {
             proxy_pass http://imonetprod_web; 
         }
        
-        ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
-    
-        # comment the following line and add the ssl_ciphers to enable http2
-        # include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    }
-   
-   # --------------------------------------------------------------------------------------
-    # REST API configuration
-    upstream imonetprod_api {
-        server imonetprod_api_1:3000 weight=3;
-    }
-    server { 
-        # Listen for ipv6
-        # listen [::]:443 ssl http2 ipv6only=on; 
-        listen [::]:443 ssl http2; 
-        # Listen for ipv4
-        listen 443 ssl http2;
-       
-        server_name adivo.ch;
-        
         # Pattern to access the api service
         # Example: http://dbadmin.rhb.innotix.local
-        location /api {
+        location /api/ {
             proxy_pass         http://imonetprod_api;
             # proxy_redirect     off;
             # proxy_set_header   Host $host;
@@ -83,18 +60,22 @@ http {
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header   X-Forwarded-Host $server_name;
         }
-        ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
-        ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+        # Here common config
     }
+   
+   # --------------------------------------------------------------------------------------
+    # REST API configuration
+    upstream imonetprod_api {
+        server imonetprod_api_1:3000 weight=3;
+    }
+    
     server { 
         # Listen for ipv6
         # listen [::]:443 ssl http2 ipv6only=on; 
         listen [::]:443 ssl http2; 
         # Listen for ipv4
         listen 443 ssl http2;
-       
+        include common.conf; 
         server_name api.adivo.ch;
         
         # Pattern to access the api service
@@ -107,10 +88,7 @@ http {
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header   X-Forwarded-Host $server_name;
         }
-        ssl_certificate /etc/letsencrypt/live/adivo.ch/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/adivo.ch/privkey.pem;
-        ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+       
     }
     # --------------------------------------------------------------------------------------
     # DB Admin Tool
@@ -126,7 +104,7 @@ http {
         listen 443 ssl http2;
        
         server_name adminer.adivo.ch;
-        
+        include common.conf;
         # Pattern to access the api service
         # Example: http://dbadmin.rhb.innotix.local
         location / {
