add second service to match class-room

--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -32,6 +32,15 @@ http {
         #server imonetprod_web_2:80;
         #server imonetprod_web_3:80;    
     }
+    
+    # REST API configuration
+    upstream imonetprod_api {
+        server imonetprod_api_1:3000 weight=3;
+    }
+    # DB Admin Tool
+    upstream imonetprod_adminer {
+        server imonetprod_adminer_1:4022 weight=3;
+    }
     server {
         # Listen for ipv6
         # listen [::]:443 ssl http2 ipv6only=on; 
@@ -60,14 +69,64 @@ http {
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header   X-Forwarded-Host $server_name;
         }
+        location /adminer {
+            proxy_pass         http://imonetprod_adminer;
+            # proxy_redirect     off;
+            # proxy_set_header   Host $host;
+            # proxy_set_header   X-Real-IP $remote_addr;
+            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header   X-Forwarded-Host $server_name;
+        }
         # Here common config
     }
-   
-   # --------------------------------------------------------------------------------------
-    # REST API configuration
-    upstream imonetprod_api {
-        server imonetprod_api_1:3000 weight=3;
+   upstream imonetprod_pwa {
+        server imonetprod_pwa_1:80 weight=3;
+        #server imonetprod_web_2:80;
+        #server imonetprod_web_3:80;    
     }
+    
+   
+   
+    server {
+        # Listen for ipv6
+        # listen [::]:443 ssl http2 ipv6only=on; 
+        listen [::]:443 ssl http2; 
+        # Listen for ipv4
+        listen 443 ssl http2;
+        # The server_name is used to match the correct server section.
+        # However if no match occurs the first server section is applied.
+        server_name class-room.ch;
+        include common.conf;
+        location / {
+            # When using the internal url of the web service:
+            # proxy_pass http://imonetprod_web_1:80; 
+
+            # Reference the upstream server configured above
+            proxy_pass http://imonetprod_pwa; 
+        }
+       
+        # Pattern to access the api service
+        # Example: http://dbadmin.rhb.innotix.local
+        location /api/ {
+            proxy_pass         http://imonetprod_api;
+            # proxy_redirect     off;
+            # proxy_set_header   Host $host;
+            # proxy_set_header   X-Real-IP $remote_addr;
+            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header   X-Forwarded-Host $server_name;
+        }
+        location /adminer {
+            proxy_pass         http://imonetprod_adminer;
+            # proxy_redirect     off;
+            # proxy_set_header   Host $host;
+            # proxy_set_header   X-Real-IP $remote_addr;
+            # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header   X-Forwarded-Host $server_name;
+        }
+        # Here common config
+    }
+   # --------------------------------------------------------------------------------------
+   
     
     server { 
         # Listen for ipv6
@@ -91,10 +150,7 @@ http {
        
     }
     # --------------------------------------------------------------------------------------
-    # DB Admin Tool
-    upstream imonetprod_adminer {
-        server imonetprod_adminer_1:4022 weight=3;
-    }
+    
     
     server { 
         # Listen for ipv6
