--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -52,6 +52,17 @@ services:
     command: [nginx, "-g", "daemon off;"]
     networks:
       proxy:
+  pwa:
+    image: nginx:stable-alpine
+    # ports:
+    #  - 81:80
+    volumes:
+      - ../pwa/dist:/usr/share/nginx/html
+      - ../pwa/nginx/nginx.conf:/etc/nginx/nginx.conf
+      # - ../proxy/prod/certs:/etc/ssl/private
+    command: [nginx, "-g", "daemon off;"]
+    networks:
+      proxy:
 
   web-build-2:
     image: node:13.6.0-alpine3.10
