--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -115,7 +115,7 @@ http {
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header   X-Forwarded-Host $server_name;
         }
-        location /adminer {
+        location /adminer/ {
             proxy_pass         http://imonetprod_adminer;
             # proxy_redirect     off;
             # proxy_set_header   Host $host;
