--- a/proxy/config2/nginx.conf
+++ b/proxy/config2/nginx.conf
@@ -39,7 +39,7 @@ http {
     }
     # DB Admin Tool
     upstream imonetprod_adminer {
-        server imonetprod_adminer_1:4022 weight=3;
+        server imonetprod_adminer_1:8080 weight=3;
     }
     server {
         # Listen for ipv6
@@ -69,7 +69,7 @@ http {
             # proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header   X-Forwarded-Host $server_name;
         }
-        location /adminer {
+        location /adminer/ {
             proxy_pass         http://imonetprod_adminer;
             # proxy_redirect     off;
             # proxy_set_header   Host $host;
