--- a/api/src/config/configsDefaults.json
+++ b/api/src/config/configsDefaults.json
@@ -30,6 +30,9 @@
       "product"
     ]
   },
+  "paths": {
+    "files": "$FILE_PATH"
+  },
   "api": {
     "basePath": "api",
     "defaults": {
