--- a/ui-vuetify/package.json
+++ b/ui-vuetify/package.json
@@ -11,9 +11,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-pdf": "^4.0.8",
     "vue-router": "^3.1.5",
     "vuejs-logger": "^1.5.4",
     "vuetify": "^2.2.21",
