--- a/scripts/docker-compose-prod.yml
+++ b/scripts/docker-compose-prod.yml
@@ -63,6 +63,9 @@ services:
       - ../pwa/nginx/nginx.conf:/etc/nginx/nginx.conf
       # - ../proxy/prod/certs:/etc/ssl/private
     command: [nginx, "-g", "daemon off;"]
+    environment:
+      VUE_APP_API_URL: ${VUE_APP_API_URL}
+
     networks:
       proxy:
 
