--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -29,33 +29,27 @@ http {
     #    add_header Cache-Control no-cache;
     #}
     location ~ \.js$  {
-       proxy_set_header Content-Type "application/javascript";
-        ## override content-type ##
         ## THIS WORKS, whereas proxy_set_header does not
         types { } default_type "application/javascript; charset=utf-8";
  
         ## override header (more like send custom header using nginx) #
         add_header x-robots-tag "noindex, follow";
     }
+    location ~ \.pdf$  {
+       types { } default_type "application/pdf";
+    }
+    location ~ \.png$  {
+       types { } default_type "image/png";
+    }
     location ~* ^/css(/.+\.(css))$  {
-        ## override content-type ##
-        ## THIS WORKS, whereas proxy_set_header does not
         types { } default_type "text/css";
  
         ## override header (more like send custom header using nginx) #
         add_header x-robots-tag "noindex, follow";
     }
-    location /js/ {
-       proxy_set_header Content-Type "application/javascript";
+    #location /js/ {
+     #  proxy_set_header Content-Type "application/javascript";
         ## override content-type ##
-        types { } default_type "application/javascript; charset=utf-8";
- 
-        ## override header (more like send custom header using nginx) #
-        #add_header x-robots-tag "noindex, follow";
-    }
-    #location /config.json {
-    #    add_header Cache-Control no-cache;
-    #}
-   }
-
+      #  types { } default_type "application/javascript; charset=utf-8";
+  }
 }
