--- a/ui-vuetify/nginx/nginx.conf
+++ b/ui-vuetify/nginx/nginx.conf
@@ -26,6 +26,9 @@ http {
     location /static/ {
         add_header Cache-Control max-age=31536000;
     }
+    location /public/ {
+        add_header Cache-Control max-age=31536000;
+    }
     #location /index.html {
     #    add_header Cache-Control no-cache;
     #}
